force-app/main/default/objects/Historique_Injoignabilites__c/Historique_Injoignabilites__c.object-meta.xml
<CustomObject>
    <description>Cet objet permet d&#39;historiser les période d&#39;injoignabilité d&#39;un PUDO.</description>
    <label>Historique Injoignabilité</label>
    <nameField>
        <displayFormat>HIN-{0000}</displayFormat>
        <label>Numero d&#39;historique d&#39;injoignabilité</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Historique Injoignabilités</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>