force-app/main/default/objects/Historique_Injoignabilites__c/fields/Compte__c.field-meta.xml
<CustomField>
    <fullName>Compte__c</fullName>
    <label>Compte</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Historique Injoignabilités</relationshipLabel>
    <relationshipName>Historique_Injoignabilites</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>