force-app/main/default/objects/Historique_Injoignabilites__c/fields/Date_de_debut1__c.field-meta.xml
<CustomField>
    <fullName>Date_de_debut1__c</fullName>
    <label>Date de début</label>
    <required>true</required>
    <type>Date</type>
</CustomField>