force-app/main/default/objects/Historique_Injoignabilites__c/fields/Date_de_fin1__c.field-meta.xml
<CustomField>
    <fullName>Date_de_fin1__c</fullName>
    <label>Date de fin</label>
    <type>Date</type>
</CustomField>