force-app/main/default/objects/Historique_Injoignabilites__c/fields/Duree__c.field-meta.xml
<CustomField>
    <fullName>Duree__c</fullName>
    <formula>ABS((Date_de_fin1__c  - Date_de_debut1__c) + 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Durée (en jours)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>