force-app/main/default/objects/Historique_Injoignabilites__c/fields/Indisponibilite__c.field-meta.xml
<CustomField>
    <fullName>Indisponibilite__c</fullName>
    <label>Indisponibilité</label>
    <referenceTo>Conge_Indispo__c</referenceTo>
    <relationshipLabel>Historique Injoignabilités</relationshipLabel>
    <relationshipName>Historique_Injoignabilites</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>